<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Building Blocks CRE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">company logo</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="contacts">Contacts</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone</string>
    <string name="tab1">Contacts</string>
    <string name="tab2">Properties</string>
    <string name="tab3">Listings</string>
    <string name="tab4">Incoming Calls</string>
    <string name="exit">Exit</string>
    <string name="note">Note</string>
    <string name="add_note">Add Note</string>
    <string name="full_name">First Last</string>
    <string name="comp_name">Company</string>
    <string name="title">Title</string>
    <string name="colon">:</string>
    <string name="dummy">dummy</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="web">Web</string>
    <string name="create_note">Create Note</string>
    <string name="alt_phone">Alt Phone</string>
    <string name="mobile">Mobile</string>
    <string name="fax">Fax</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="incoming_calls">Incoming Calls</string>
    <string name="enter_information">Enter Information</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="caller_type">Caller Type</string>

    <string name="date">Date</string>
    <string name="state_zip">State, Zip</string>
    <string name="cell">Cell</string>
    <string name="prompt">Please Select</string>
    <string name="found_listing_by">Found Listing By</string>
    <string name="link_this_call_to">Link This Call To</string>
    <string name="radio1_label">A Lising as an Inquiry</string>
    <string name="radio1_desc">Creates a record in a listing in the Inquiry tab. Inquires are documented in the activity reports for owners and can be added to potential deals.</string>
    <string name="radio2_label">A Contact as a Note</string>
    <string name="radio2_desc">Creates a note record for a Contact with the call information</string>
    <string name="radio3_label">A Property as a Note</string>
    <string name="radio3_desc">Creates a note record for a Property with the call information</string>
    <string name="keep_logged_in">Keep me logged in</string>
    <string name="properties">Properties</string>
    <string name="property_name">Property Name</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="property_type">Property Type</string>
    <string name="sub_type">Sub-Type</string>
    <string name="property_size">Property Size</string>
    <string name="building_class">Building Class</string>
    <string name="no_of_units">Number of Units</string>
    <string name="zoning">Zoning</string>
    <string name="parking">Parking</string>
    <string name="lot_size">Lot Size</string>
    <string name="building_use">Building Use</string>
    <string name="construction">Construction</string>
    <string name="parcel_no">Parcel Number</string>
    <string name="parking_1000">Parking/1000</string>
    <string name="team">Team</string>
    <string name="status">Status</string>
    <string name="project_name">Project Name</string>
    <string name="listing_type">Listing Type</string>
    <string name="unit_avail">Unit Available</string>
    <string name="primary_client">Primary Client</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="start_date">Start Date</string>
    <string name="sale_price">Sale Price</string>
    <string name="lease_rate">Lease Rate</string>
    <string name="listing_comm">Listing Commission</string>
    <string name="co_op_comm">Co-op Commission</string>
    <string name="primary_contact">Primary Contact</string>

</resources>