<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="20dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/link_this_call_to"
                android:textSize="@dimen/large_text_size" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="80dp" >

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/radio_button_selector"
                    android:checked="true"
                    android:paddingLeft="40dp"
                    android:singleLine="false"
                    android:text="@string/radio1_label" />

                <TextView
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="@string/radio1_desc" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:button="@drawable/radio_button_selector"
                    android:paddingLeft="40dp"
                    android:text="@string/radio2_label" />

                <TextView
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="@string/radio2_desc" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:button="@drawable/radio_button_selector"
                    android:paddingLeft="40dp"
                    android:text="@string/radio3_label" />

                <TextView
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="@string/radio3_desc" />
            </RadioGroup>
        </RelativeLayout>
    </ScrollView>

    
    <RelativeLayout
        android:id="@+id/note_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/note_bar_bg"
        android:paddingBottom="@dimen/padding_large"
        android:paddingTop="@dimen/padding_large" >

        <Button
            android:id="@+id/in_call_step2_continue"
            android:layout_width="@dimen/add_note_button_width"
            android:layout_height="@dimen/add_note_button_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="70dp"
            android:background="@drawable/button_continue" />
    </RelativeLayout>
</LinearLayout>