<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large"
        android:gravity="center_vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/check_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:contentDescription="@string/desc"
                android:gravity="left|center_vertical"
                android:src="@drawable/checkmark" />
            
            <TextView
                android:id="@+id/col1"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/first_name"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/col2"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/last_name"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/col3"
                android:layout_width="300dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/comp_name"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/col4"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/category"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/col5"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/phone_no"
                android:textSize="@dimen/medium_text_size" />
        </TableRow>
    </TableLayout>
<!-- 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="left|center_vertical" >

    <TextView
        android:id="@+id/col1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/table_col1"
        android:textSize="@dimen/medium_text_size" />

    <TextView
        android:id="@+id/col2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/table_col2"
        android:textSize="@dimen/medium_text_size" />

    <TextView
        android:id="@+id/col3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/table_col3"
        android:textSize="@dimen/medium_text_size" />

    <TextView
        android:id="@+id/col4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/table_col4"
        android:textSize="@dimen/medium_text_size" />

    <TextView
        android:id="@+id/col5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/table_col5"
        android:textSize="@dimen/medium_text_size" />

</LinearLayout>
 -->