<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AllContactsActivity" >

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@drawable/main_bg" >

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="@dimen/app_icon"
            android:layout_height="@dimen/app_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/desc"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

       <TextView
            android:id="@+id/tab_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/contacts"
            android:textColor="@color/header_footer_bg"
            android:textSize="@dimen/tab_name_text_size" />

     <!--    <ImageButton
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/app_icon"
            android:layout_toLeftOf="@+id/app_icon"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/desc"
            android:src="@drawable/logout" />
        -->
    </RelativeLayout>

    <SearchView
        android:id="@+id/searchView1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/search_bar_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header_layout" >
    </SearchView>
   
    <!-- 
    <include layout="@layout/list_row" />
     -->
    
    <TableLayout
        android:id="@+id/table_header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/searchView1"
        android:background="@color/header_footer_bg"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/padding_small"
        android:paddingTop="@dimen/padding_small" >

        <TableRow>

            <TextView
                android:id="@+id/table_col1"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/first_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/table_col2"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/last_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/table_col3"
                android:layout_width="300dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/comp_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/table_col4"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/category"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/table_col5"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/phone_no"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text_size" />
        </TableRow>
    </TableLayout>

    
    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/table_header_layout" >
    </ListView>
    
    <RelativeLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/header_footer_bg" >

        <Button
            android:id="@+id/contacts_tab"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:background="@null"
            android:drawableTop="@drawable/contact"
            android:text="@string/tab1" />

        <Button
            android:id="@+id/properties_tab"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:layout_toRightOf="@id/contacts_tab"
            android:background="@null"
            android:drawableTop="@drawable/properties"
            android:text="@string/tab2" />

        <Button
            android:id="@+id/listing_tab"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:layout_toRightOf="@id/properties_tab"
            android:background="@null"
            android:drawableTop="@drawable/listings"
            android:text="@string/tab3" />

        <Button
            android:id="@+id/incoming_call_tab"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:layout_toRightOf="@id/listing_tab"
            android:background="@null"
            android:drawableTop="@drawable/call"
            android:text="@string/tab4" />
  <!-- 
        <Button
            android:id="@+id/create_note_tab"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft=""@dimen/padding_large"
            android:paddingTop="@dimen/padding_large"
            android:paddingBottom="@dimen/padding_large"
            android:layout_toRightOf="@id/incoming_call_tab"
            android:drawableTop="@drawable/ic_launcher"
            android:background="@null"
            android:text="@string/create_note"/>
    -->
    </RelativeLayout>
<!--
    <RelativeLayout
        android:id="@+id/search_bar_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:layout_marginTop="10dip" >

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_launcher" />
			android:src="@android:drawable/ic_btn_search
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/search_button"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@id/search_button"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@id/search_button"
            android:ems="30"
            android:gravity="bottom"
            android:textSize="20dip"
            android:background="@drawable/rounded_edittext" >

            <requestFocus />
        </EditText>

    </RelativeLayout>


    -->

</RelativeLayout>